--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,7 +7,11 @@
     <% @questions.each do |question| %>
       <div class="list-item">
         <li class="left tal">
-          <%= link_to(question.title, question_path(question)) %>
+          <%
+            title = question.title
+            title += '&nbsp' + t('questions.new_answers', count: @new_answers[question.id].to_i) if @new_answers[question.id].to_i > 0
+          %>
+          <%= link_to(title.html_safe, question_path(question)) %>
         </li>
       </div>
     <% end %>
